# lbfy

./: Cargo.toml  README.md  plan.md  research.md
src/: app_state.rs  config.rs  listener.rs  main.rs  proxy.rs  shed.rs
src/backend/: health.rs  mod.rs
src/observability/: metrics.rs  tracing.rs
src/scheduler/: latency.rs  mod.rs  round_robin.rs
